fixed a bunch of redirect issues and layout issues

--- a/app/webroot/css/limabean.css
+++ b/app/webroot/css/limabean.css
@@ -1,30 +1,20 @@
-#map{
-	height: 500px;
-	width: 500px;
+body {
+        background-color: #fff;
 }
 
-#fields-view{
-	border-left: 1px solid #666;
-    	float: right;
-    	padding: 10px 2%;
-	width: 58%;
+#header{
+        background:#62af56;
+        background-image: -webkit-gradient(linear, left top, left bottom, from(#76BF6B), to(#3B8230));
+        background-image: -webkit-linear-gradient(top, #76BF6B, #3B8230);
+        background-image: -moz-linear-gradient(top, #76BF6B, #3B8230);
+        border-color: #2d6324;
+        color: #fff;
+        text-shadow: rgba(0, 0, 0, 0.5) 0px -1px 0px;
+        padding: 8px 10px;
 }
 
-#users-view{
-        border-left: 1px solid #666;
-        float: right;
-        padding: 10px 2%;
-        width: 58%;
-}
-
-#map-container{
-    float: left;
-    padding: 10px 1.5%;
-    width: 30%;
-}
-
-#MeasurementParameters{
-	padding: 10px;
+span.nav{
+/*      padding-left: 5px; */
 }
 
 div.preview {
